RESOLVED FIXED290815
REGRESSION(277555@main): Date doesn't animate the first time a guitar is hovered on https://vintageguitars.fr
https://bugs.webkit.org/show_bug.cgi?id=290815
Summary REGRESSION(277555@main): Date doesn't animate the first time a guitar is hove...
alan
Reported 2025-03-31 17:11:33 PDT
Attachments
[fast-cq]Patch (3.70 KB, patch)
2025-03-31 17:15 PDT, alan
no flags
alan
Comment 1 2025-03-31 17:15:28 PDT
Created attachment 474782 [details] [fast-cq]Patch
EWS
Comment 2 2025-04-01 09:43:46 PDT
Committed 293016@main (5ea2de7cbee4): <https://commits.webkit.org/293016@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 474782 [details].
Note You need to log in before you can comment on or make changes to this bug.