REGRESSION(277555@main): Date doesn't animate the first time a guitar is hovered on https://vintageguitars.fr https://bugs.webkit.org/show_bug.cgi?id=290815

Reviewed by Antti Koivisto.

Make sure InlineTextBox and the associated RenderText have the same style (even when it's just compositing related like opacity or transform).

* LayoutTests/fast/repaint/text-content-becomes-visible-and-moves-expected.txt: Added.
* LayoutTests/fast/repaint/text-content-becomes-visible-and-moves.html: Added.
* Source/WebCore/rendering/RenderText.cpp:
(WebCore::RenderText::styleDidChange):

Canonical link: https://commits.webkit.org/293016@main